# syster-base

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TEST_FAILURES_TRIAGE.md  TEST_TRIAGE.md  pixi.toml  test-failure-report.md
docs/: CORE_MODULE_CLEANUP.md  INTERCHANGE_INTEGRATION_PLAN.md  PARSER_ERROR_HANDLING_PLAN.md  PARSER_SYNTAX_REFACTOR.md  TEST.md  TEST_MIGRATION_PLAN.md  TODO_FILTER_IMPORT_EVALUATION.md  TRIAGE.md  grammar-gaps.adoc  grammar-mapping.adoc
examples/: check_xmi_diff.rs  debug_ast.rs.disabled  debug_nested.rs  debug_redef.rs  probe_exists.rs  show_roundtrip.rs  test_accept_action.rs  test_allocation_parse.rs  test_anon.rs  test_anon2.rs  test_assume_parser.rs  test_assume_semantic.rs  test_ast.rs  test_ast_satisfy.rs  test_bind_index.rs  test_bind_parse.rs  test_bind_refs.rs  test_bracket.rs  test_compare.rs  test_conn.rs  test_connect_ast.rs  test_connect_parse.rs  test_connect_semantic.rs  test_control_ast.rs  test_control_nodes.rs  test_debug.rs  test_decompile.rs  test_dependency_semantic.rs  test_derivation_ast.rs  test_derivation_parser.rs  test_derivation_semantic.rs  test_errors.rs  test_expression_patterns.rs  test_filter.rs  test_filter_correct.rs  test_filter_dbg.rs  test_filter_debug.rs  test_filter_extract.rs  test_filter_meta.rs  test_filter_or.rs  (+55 more)
src/: lib.rs  parser.rs
tests/: TEST_DATA_COMPLETE.md  debug_layer_trace.rs  debug_xmi.rs  expose_resolver_tests.rs  extract_test_data.py  filter_eval_tests.rs  test_bind_no_spaces.rs  test_bind_rhs_second_part.rs  test_chain_first_triage.rs  test_chain_member_failures.rs  (+98 more)
(+379 files in other folders)
